# krispy-kreme-tsp-validation

./: .gitignore  README.md  push_relabel.cpp
christofides/find-euler/: CMakeLists.txt  Graph.cpp  find_euler.cpp
christofides/find-euler/Graph/: Graph.cpp  Graph.h
held_karp/validate/: CMakeLists.txt  Makefile  cmake_install.cmake  sample.cpp
pipage-rounding/: .gitignore  CMakeLists.txt  Makefile  Makefile.backup  abs_ppr.cpp  abs_ppr.h  abs_ppr.h.backup  cmake_install.cmake  indice_diff.h  merge_spanning_trees.py  ppr_ds.h  rand_ppr  randomized_ppr.cpp  randomized_ppr.h  sample.cpp  sample2.cpp  sample_testall.cpp
pipage-rounding/inputs/: 1.txt  2.txt  280.txt  3.txt  4.txt  5.txt
pipage-rounding/output_backup/: 1.txt  2.txt  3.txt  4.txt  5.txt
pipage-rounding/output_backup/0_95_a280/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+461 more)
pipage-rounding/output_backup/3_21_bier127/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+441 more)
pipage-rounding/output_backup/3_5_a280/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+459 more)
pipage-rounding/output_backup/3_5_bays29/: 207.txt  217.txt  302.txt  382.txt  397.txt  462.txt  465.txt  85.txt
pipage-rounding/output_backup/4_19_bays29/: 104.txt  11.txt  134.txt  138.txt  14.txt  153.txt  159.txt  178.txt  179.txt  185.txt  199.txt  208.txt  233.txt  24.txt  259.txt  269.txt  277.txt  279.txt  284.txt  290.txt  308.txt  320.txt  352.txt  363.txt  37.txt  374.txt  382.txt  404.txt  408.txt  409.txt  416.txt  432.txt  433.txt  435.txt  45.txt  455.txt  484.txt  485.txt  491.txt  494.txt  (+6 more)
pipage-rounding/outputs/: 1.txt  2.txt  280.txt  3.txt  4.txt  5.txt
(+171 files in other folders)
